--- a/stylesheets/all.css
+++ b/stylesheets/all.css
@@ -76,7 +76,7 @@ body {
   font-size: 16px;
   line-height: 24px;
   padding: 20px 0;
-  background: #25aab2;
+  background: #f9e3f3;
 }
 
 /* line 16, ../sass/core/_global.scss */
